I "fixed tha damn logo in dark mode".

--- a/public/resources/css/landing.css
+++ b/public/resources/css/landing.css
@@ -57,7 +57,7 @@
 .logo-container {
   position: fixed;
   margin: 0;
-  top: 0%;
+  top: 0;
   width: 24vw;
   left: 10%;
 }
